<resources>
    <string name="app_name">Login</string>
    <string name="login_angle">270</string>
    <string name="login">Sign in</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="createAccount">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_your_email_id">Enter Your Email Id</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No.</string>
    <string name="create_password">Create Password</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_your_password">Forget Your Password</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="singn_Out">Sign Out</string>
    <string name="action_settings">Settings</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="forget_password">Forget Password</string>
    <string name="back"><![CDATA[<- BACK]]></string>
</resources>
